[gd_scene load_steps=11 format=3 uid="uid://hbg2up4fif2q"]

[ext_resource type="Script" uid="uid://yeb3ns848lio" path="res://autoloads/sound_controller.gd" id="1_26ac4"]
[ext_resource type="AudioStream" uid="uid://doo42nniepw5m" path="res://assets/sound/HomeMusic.mp3" id="2_qwup7"]
[ext_resource type="AudioStream" uid="uid://k8iwl2q62gkl" path="res://assets/sound/sfx_select.ogg" id="3_6ijex"]
[ext_resource type="AudioStream" uid="uid://cmx1aunsw2rve" path="res://assets/sound/CaveMusic.mp3" id="4_6ijex"]
[ext_resource type="AudioStream" uid="uid://bfhjbqakpo0pp" path="res://assets/sound/GameMusic.mp3" id="5_6ijex"]
[ext_resource type="AudioStream" uid="uid://y5xur7ii7kpn" path="res://assets/sound/CreditMusic.mp3" id="5_nvfkv"]
[ext_resource type="AudioStream" uid="uid://b64a4xrtqfa38" path="res://assets/sound/sfx_jump.ogg" id="6_b1fgb"]
[ext_resource type="AudioStream" uid="uid://bu8pd321dx68f" path="res://assets/sound/sfx_disappear.ogg" id="7_nvfkv"]
[ext_resource type="AudioStream" uid="uid://dbecvjqgem02m" path="res://assets/sound/sfx_coin.ogg" id="8_nm6he"]
[ext_resource type="AudioStream" uid="uid://c4f8dnt08ve5j" path="res://assets/sound/sfx_passage.ogg" id="9_bxb7b"]

[node name="SoundController" type="Node2D"]
script = ExtResource("1_26ac4")

[node name="HomeMusic" type="AudioStreamPlayer" parent="." groups=["music"]]
stream = ExtResource("2_qwup7")
volume_db = -12.0
parameters/looping = true

[node name="CaveMusic" type="AudioStreamPlayer" parent="." groups=["music"]]
stream = ExtResource("4_6ijex")
volume_db = -12.0
parameters/looping = true

[node name="GameMusic" type="AudioStreamPlayer" parent="." groups=["music"]]
stream = ExtResource("5_6ijex")
volume_db = -12.0
parameters/looping = true

[node name="CreditMusic" type="AudioStreamPlayer" parent="." groups=["music"]]
stream = ExtResource("5_nvfkv")
volume_db = -12.0
parameters/looping = true

[node name="SfxSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6ijex")
volume_db = -6.0

[node name="SfxJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_b1fgb")
volume_db = -6.0

[node name="SfxDisappear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nvfkv")
volume_db = -6.0

[node name="SfxCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_nm6he")
volume_db = -6.0

[node name="SfxPassage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_bxb7b")
volume_db = -6.0
